--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-pg",
   "version": "0.1.0",
-  "homepage": "https://eXleafriend.github.io/react-pg",
+  "homepage": "https://eXleafriend.github.io/react-pg/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -27,7 +27,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build -e react-pg"
   },
   "eslintConfig": {
     "extends": [
